--- a/kitty.conf
+++ b/kitty.conf
@@ -10,6 +10,9 @@ italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
 
+font_size 10.0
+
+
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
