--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,18 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+map ctrl+left resize_window narrower
+map ctrl+right resize_window wider
+map ctrl+up resize_window taller
+map ctrl+down resize_window shorter 3
+# reset all windows in the tab to default sizes
+map ctrl+home resize_window reset
+
+map ctrl+[ layout_action decrease_num_full_size_windows
+map ctrl+] layout_action increase_num_full_size_windows
+map ctrl+/ layout_action mirror toggle
+map ctrl+y layout_action mirror true
+map ctrl+n layout_action mirror false
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
