add switcing sizes brakepoints

--- a/kitty.conf
+++ b/kitty.conf
@@ -13,6 +13,8 @@ map ctrl+/ layout_action mirror toggle
 map ctrl+y layout_action mirror true
 map ctrl+n layout_action mirror false
 
+map ctrl+. layout_action bias 50 62 70 80 90
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
