change theme to tokyo night

--- a/kitty.conf
+++ b/kitty.conf
@@ -1301,22 +1301,19 @@ active_tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab
 
 #: Template to use for active tabs. If not specified falls back to
 #: tab_title_template.
-
-active_tab_foreground   #000
-active_tab_background   #eee
+# active_tab_foreground   #000
+# active_tab_background   #eee
 active_tab_font_style   bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
+# inactive_tab_foreground #444
+# inactive_tab_background #999
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
-
-tab_bar_background none
+# tab_bar_background none
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
-
-tab_bar_margin_color none
+# tab_bar_margin_color none
 
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color for margins above and below the tab bar. For side
@@ -1326,9 +1323,8 @@ tab_bar_margin_color none
 #: }}}
 
 #: Color scheme {{{
-
-foreground #dddddd
-background #222436
+# foreground #dddddd
+# background #222436
 
 #: The foreground and background colors.
 
@@ -2799,3 +2795,9 @@ editor nvim
 
 #: }}}
 
+
+
+# BEGIN_KITTY_THEME
+# Tokyo Night
+include current-theme.conf
+# END_KITTY_THEME
