--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+open_url_with yandex-browser
+
 map ctrl+left resize_window narrower
 map ctrl+right resize_window wider
 map ctrl+up resize_window taller
