set open url with xdg

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-open_url_with yandex-browser
+open_url_with xdg-open
 
 map ctrl+left resize_window narrower
 map ctrl+right resize_window wider
