move keymaps to separate file. remove colors forom comments

--- a/kitty.conf
+++ b/kitty.conf
@@ -2,17 +2,6 @@
 
 open_url_with xdg-open
 
-map ctrl+left resize_window narrower
-map ctrl+right resize_window wider
-map ctrl+up resize_window taller
-map ctrl+down resize_window shorter 3
-# reset all windows in the tab to default sizes
-map ctrl+home resize_window reset
-
-map ctrl+[ layout_action decrease_num_full_size_windows
-map ctrl+] layout_action increase_num_full_size_windows
-map ctrl+/ layout_action mirror toggle
-map ctrl+. layout_action bias 50 62 70 80 90
 
 #: Fonts {{{
 
@@ -1461,80 +1450,6 @@ background_blur 10
 #: to be used unchanged. Note that these colors can be overridden by
 #: the program running in the terminal.
 
-#: The color table {{{
-
-#: The 256 terminal colors. There are 8 basic colors, each color has a
-#: dull and bright version, for the first 16 colors. You can set the
-#: remaining 240 colors as color16 to color255.
-
-# color0 #000000
-# color8 #767676
-
-#: black
-
-# color1 #cc0403
-# color9 #f2201f
-
-#: red
-
-# color2  #19cb00
-# color10 #23fd00
-
-#: green
-
-# color3  #cecb00
-# color11 #fffd00
-
-#: yellow
-
-# color4  #0d73cc
-# color12 #1a8fff
-
-#: blue
-
-# color5  #cb1ed1
-# color13 #fd28ff
-
-#: magenta
-
-# color6  #0dcdcd
-# color14 #14ffff
-
-#: cyan
-
-# color7  #dddddd
-# color15 #ffffff
-
-#: white
-
-# mark1_foreground black
-
-#: Color for marks of type 1
-
-# mark1_background #98d3cb
-
-#: Color for marks of type 1 (light steel blue)
-
-# mark2_foreground black
-
-#: Color for marks of type 2
-
-# mark2_background #f2dcd3
-
-#: Color for marks of type 1 (beige)
-
-# mark3_foreground black
-
-#: Color for marks of type 3
-
-# mark3_background #f274bc
-
-#: Color for marks of type 3 (violet)
-
-#: }}}
-
-#: }}}
-
 #: Advanced {{{
 
 shell fish
@@ -2800,3 +2715,7 @@ editor nvim
 # Tokyo Night
 include current-theme.conf
 # END_KITTY_THEME
+
+# BEGIN_KITTY_KEYMAPS
+include keymaps.conf
+# END_KITTY_KEYMAPS
